--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
     </parent>
 
     <properties>
+        <sonar.projectKey>MYMUSIC</sonar.projectKey>
+        <sonar.host.url>http://ip172-18-0-17-buq3fuhqckh000bijlj0-9000.direct.labs.play-with-docker.com</sonar.host.url>
+        <sonar.login>30147905221838ff5c9de8066e271c56b6277943</sonar.login>	
+        <sonar.language>java</sonar.language>	   
+        <sonar.sources>src/main/java</sonar.sources>
+        <sonar.java.binaries>target/classes</sonar.java.binaries>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
